[tool.poetry]
name = "knn-tweets"
version = "0.1.0"
description = "Predicting the author of tweet using k-NN (spoiler: kit doesn't work! Curse of Dimensionality)"
authors = ["Laura Langdon <48335772+LauraLangdon@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "knn_tweets"}]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
